# Aling_Pro

./: .cursorrules  .env  .env.cache  .env.development  .env.example  .env.local  .env.production  .env.production.example  .env.redis  .env.staging  .env.testing  AI_ENGINE_KNOWLEDGE_GRAPH_UPGRADE_DETAILS.md  ALINGAI_PRO_UPGRADE_PLAN.md  API_DOC_FIX_REPORT.md  AdvancedAttackSurfaceManagement_fix_report.md  COMPREHENSIVE_UPGRADE_PLAN.md  FINAL_COMPREHENSIVE_FIX_REPORT.md  FINAL_PHP81_FIX_STEPS.md  FINAL_PHP81_SYNTAX_FIX_REPORT.md  FINAL_PHP81_SYNTAX_FIX_REPORT_NEW.md  FINAL_RECOVERY_REPORT.md  PHP81_REMAINING_ERRORS_FIX_REPORT.md  PHP81_SYNTAX_ERROR_COMMON_FIXES.md  PHP81_SYNTAX_FIX_SUMMARY.md  PHP_8.1_FIX_SUMMARY.md  PHP_ERROR_FIX_GUIDE.md  PHP_ERROR_FIX_MASTER_PLAN.md  PHP_FIX_SUMMARY.md  PHP_HTML_TOOLS_README.md  PHP_HTML_TOOLS_README_CN.md  PHP_SYNTAX_ERRORS_FIX_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY_REPORT.md  README-news-system.md  README.md  SECURITY_IMPLEMENTATION_SUMMARY.md  SRC_FILES_RECOVERY_REPORT.md  UNICODE_ENCODING_RECOMMENDATION.md  admin-tools.bat  (+107 more)
admin-center/: .env  .htaccess  bootstrap.php  composer.json  index.php
api/: sdk-stats.php
backups/: POSTagger.php.bak  assets.php.bak
bootstrap/: app.php
completed/: .env.example  README.md  composer.json
config/: api_security_config.php  app.php  assets.php  cache.php  config.php  core_architecture.php  core_architecture_routes.php  database.php  database_security.php  logging.php  mcp.php  monitoring.php  (+8 more)
sdk_source/python/: README.md  alingai.py  pyproject.toml
(+4188 files in other folders)
